--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "php": ">=5.4"
     },
     "require-dev": {
-        
+        "toohamster/ws": "*"
     },
     "autoload": {
         "classmap": [],
